samples/_failures_safe/1761669576_43bac8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0e428255.c: In function ‘main’:
./samples/SAFE/__tmp_0e428255.c:122:13: error: expected declaration or statement at end of input
  122 |             } else {
      |             ^
./samples/SAFE/__tmp_0e428255.c:122:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0e428255.c:122:13: error: expected declaration or statement at end of input
